--- a/Statch/Views/Home/Index.cshtml
+++ b/Statch/Views/Home/Index.cshtml
@@ -1,8 +1,52 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE HTML>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width = device-width,
+                                           initial-scale = 1" />
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+<body>
+    <br />
+    <div>
+        <h1 class="font-weight-bold text-center">Statch</h1>
+        <h5 class="text-center">Money? We got your Back</h5>
+        <hr />
+        <p class="text-center">An Easy-to-Use web page for the tracking and management of their own finances that everyone can use</p>
+        <hr />
+        <div>
+            <br /><br />
+            <div class="text-center">
+                <a class="btn btn-primary text-white rounded-pill mr-2" asp-action="Index" asp-controller="Login">Login</a>
+            </div>
+            <br />
+            <hr />
+            <h3>Contact Us</h3>
+            <form target="_blank" action="https://formsubmit.co/entergmailhere@gmail.com" method="POST">
+                <br />
+                <div class="form-group">
+                    <div class="form-row">
+                        <div class="col">
+                            <input type="text" name="Name" class="form-control" placeholder="Full Name" required>
+                        </div>
+                        <div class="col">
+                            <input type="email" name="Email" class="form-control" placeholder="Email Address" required>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <textarea placeholder="Your Message" class="form-control" name="Message" rows="3" required></textarea>
+                </div>
+                <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
+                <br />
+            </form>
+        </div>
+    </div>
+    <hr />
+</body>
+
+</html>
