--- a/Statch/Views/Shared/_UserBar.cshtml
+++ b/Statch/Views/Shared/_UserBar.cshtml
@@ -8,7 +8,7 @@
     <div class="collapse navbar-collapse" id="publicNavbar">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link text-light" href="">Tool</a>
+                <a class="nav-link text-light" href="~/Home/Tool">Tool</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
