I guess the download works now LMFAO
the excel can be downloaded

--- a/Statch/Views/Home/Tool.cshtml
+++ b/Statch/Views/Home/Tool.cshtml
@@ -1,3 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Tool";
 }
+
+<!DOCTYPE HTML>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width = device-width,
+                                           initial-scale = 1" />
+    <link rel="stylesheet" href="~/css/site.css" />
+</head>
+<body>
+    <a href="~/ass.xlsx" download="THE TOOL">the tool lmfao</a>
+</body>
