file located and made a button

--- a/Statch/Views/Home/Tool.cshtml
+++ b/Statch/Views/Home/Tool.cshtml
@@ -11,5 +11,9 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <a href="~/ass.xlsx" download="THE TOOL">the tool lmfao</a>
+    <div class="text-center">
+        <a class="btn btn-lg btn-dark btn-pill mt-2" href="~/ass.xlsx" download="ass.xlsx">the tool</a>
+    </div>
 </body>
+
+</html>
