--- a/Statch/Views/Home/Tool.cshtml
+++ b/Statch/Views/Home/Tool.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="text-center">
-        <a class="btn btn-lg btn-dark btn-pill mt-2" href="~/ass.xlsx" download="ass.xlsx">the tool</a>
+        <a class="btn btn-lg btn-dark btn-pill mt-2" href="~/ass.xlsx" download="tool.xlsx">Download the Financial Tool!</a>
     </div>
 </body>
 
