made tool fancy

--- a/Statch/Views/Home/Tool.cshtml
+++ b/Statch/Views/Home/Tool.cshtml
@@ -11,9 +11,19 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <div class="text-center">
-        <a class="btn btn-lg btn-dark btn-pill mt-2" href="~/ass.xlsx" download="tool.xlsx">Download the Financial Tool!</a>
-    </div>
-</body>
+    <br />
+    <div>
+        <h1 class="font-weight-bold text-center">The last finantial tool you will need</h1>
+        <h5 class="text-center">A fast and easy way to manage your finances</h5>
+            <div class="text-center">
+                <a class="btn btn-lg btn-dark btn-pill mt-2" href="~/ass.xlsx" download="tool.xlsx">Download the Financial Tool!</a>
+            </div>
+        <div>
+        <hr />
+        <p class="text-center">Type something here to make the page look fancy so that there </p>
+        <hr />
+            </div>
+        </div>
+    </body>
 
 </html>
