--- a/Statch/Views/Shared/_PublicBar.cshtml
+++ b/Statch/Views/Shared/_PublicBar.cshtml
@@ -6,9 +6,12 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="publicNavbar">
-        <ul class="navbar-nav mr-auto">      
+        <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link text-light" href="~/Home/Tool">Tool</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" href="~/Comments/Index">Discussion Board</a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
