--- a/Statch/Views/Shared/_UserBar.cshtml
+++ b/Statch/Views/Shared/_UserBar.cshtml
@@ -10,13 +10,16 @@
             <li class="nav-item">
                 <a class="nav-link text-light" href="~/Home/Tool">Tool</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link text-light" href="~/Comments/Index">Discussion Board</a>
+            </li>
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
                 <a class="nav-link text-light" href="~/User/Details">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-light" href="~/Home/userLogOut">Log Out</a>
+                <a class="nav-link text-light" href="~/Home/LogOut">Log Out</a>
             </li>
         </ul>
     </div>
